fix: lose align issue

--- a/assets/css/unminified/frontend-rtl.css
+++ b/assets/css/unminified/frontend-rtl.css
@@ -3956,7 +3956,7 @@ body.admin-bar.ast-primary-sticky-header-active .ast-mobile-popup-drawer .ast-mo
   top: 0;
   left: 0;
   margin: 0;
-  padding: 1rem;
+  padding: 1.3rem 1rem;
   color: #ababab;
   line-height: 1.675rem;
   z-index: 10;
