--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -950,7 +950,7 @@ body.admin-bar {
 			top: 0;
 			right: 0;
 			margin: 0;
-			padding: 1rem;
+			padding: 1.3rem 1rem;
 			color: #ababab;
 			line-height: 1.675rem;
 			z-index: 10;
